--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 //	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.12'
 }
 
 tasks.named('test') {
